Bug 173807 - karbon crashes while using split view
Summary: karbon crashes while using split view
Status: RESOLVED FIXED
Alias: None
Product: karbon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jan Hambrecht
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-29 05:59 UTC by Elián Hanisch
Modified: 2009-06-09 08:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elián Hanisch 2008-10-29 05:59:09 UTC
Version:           2.0 beta-2 (using 4.1.2 (KDE 4.1.2), Kubuntu packages)
Compiler:          gcc
OS:                Linux (i686) release 2.6.24-21-generic

using split view in karbon eventually leads to crash

to reproduce, 
1- start a new document
2- split view 
3- select the freehand tool
4- draw something in each view

I don't always get a crash at the last step, but sometimes is right after splitting, or when I use the tool, all the backtraces are similar though.

--------------------------------------------

Application: Karbon14 (karbon), signal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb464c6e0 (LWP 19957)]
[KCrash handler]
#6  0xb747aa06 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#7  0xb747ba34 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#8  0xb759ccef in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#9  0xb759cd4c in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#10 0xb759cdb0 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#11 0xb759cded in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#12 0xb6f15d5c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#13 0xb61cd0ee in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#14 0xb6554c9e in QMenu::~QMenu () from /usr/lib/libQtGui.so.4
#15 0xb760b51f in KMenu::~KMenu () from /usr/lib/kde4/lib/libkdeui.so.5
#16 0xb7641b6b in KXMLGUIBuilder::removeContainer ()
   from /usr/lib/kde4/lib/libkdeui.so.5
#17 0xb7651bb2 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#18 0xb7651c9b in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#19 0xb7651ab0 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#20 0xb7651c9b in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#21 0xb7651ab0 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#22 0xb764ca6d in KXMLGUIFactory::removeClient ()
   from /usr/lib/kde4/lib/libkdeui.so.5
#23 0xb7bb8274 in KoMainWindow::slotActivePartChanged (this=0x81e4738, 
    newPart=0x816a2d0)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/libs/main/KoMainWindow.cpp:1632
#24 0xb7bc19ac in KoMainWindow::qt_metacall (this=0x81e4738, 
    _c=QMetaObject::InvokeMetaMethod, _id=29, _a=0xbfd6765c)
    at /home/m4v-kde3/dev/kde/build/koffice/trunk/libs/main/KoMainWindow.moc:151
#25 0xb6f1af79 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#26 0xb6f1b642 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#27 0xb79f4613 in KParts::PartManager::activePartChanged ()
   from /usr/lib/kde4/lib/libkparts.so.4
#28 0xb79f51e8 in KParts::PartManager::setActivePart ()
   from /usr/lib/kde4/lib/libkparts.so.4
#29 0xb79f5e74 in KParts::PartManager::eventFilter ()
   from /usr/lib/kde4/lib/libkparts.so.4
#30 0xb7bc6b81 in KoPartManager::eventFilter (this=0x81e6450, obj=0x8b249e0, 
    ev=0xbfd67c0c)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/libs/main/KoMainWindow.cpp:94
#31 0xb6f064f8 in QCoreApplicationPrivate::sendThroughApplicationEventFilters
    () from /usr/lib/libQtCore.so.4
#32 0xb617ff13 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#33 0xb6185125 in QApplication::notify () from /usr/lib/libQtGui.so.4
#34 0xb754f483 in KApplication::notify () from /usr/lib/kde4/lib/libkdeui.so.5
#35 0xb6f060b9 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#36 0xb6182661 in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#37 0xb61ec52d in ?? () from /usr/lib/libQtGui.so.4
#38 0xb61eaee1 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#39 0xb6213c2a in ?? () from /usr/lib/libQtGui.so.4
#40 0xb562ecc6 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#41 0xb5632083 in ?? () from /usr/lib/libglib-2.0.so.0
#42 0xb563263e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#43 0xb6f319f8 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#44 0xb6213a25 in ?? () from /usr/lib/libQtGui.so.4
#45 0xb6f0533d in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#46 0xb6f054cd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#47 0xb6f0774d in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#48 0xb617f897 in QApplication::exec () from /usr/lib/libQtGui.so.4
#49 0xb7f88e48 in kdemain (argc=1, argv=0xbfd684b4)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/karbon/main.cc:50
#50 0x08048936 in main (argc=0, argv=0x89)
    at /home/m4v-kde3/dev/kde/build/koffice/trunk/karbon/karbon_dummy.cpp:3
#0  0xb7f8c410 in __kernel_vsyscall ()


--------------------------------------------

Application: Karbon14 (karbon), signal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb466e6e0 (LWP 20361)]
[KCrash handler]
#6  0xb6f29430 in QCoreApplicationPrivate::sendPostedEvents ()
   from /usr/lib/libQtCore.so.4
#7  0xb6f2968d in QCoreApplication::sendPostedEvents ()
   from /usr/lib/libQtCore.so.4
#8  0xb6f5362f in ?? () from /usr/lib/libQtCore.so.4
#9  0xb5650cc6 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#10 0xb5654083 in ?? () from /usr/lib/libglib-2.0.so.0
#11 0xb565463e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#12 0xb6f539f8 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#13 0xb6235a25 in ?? () from /usr/lib/libQtGui.so.4
#14 0xb6f2733d in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#15 0xb6f274cd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#16 0xb6f2974d in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#17 0xb61a1897 in QApplication::exec () from /usr/lib/libQtGui.so.4
#18 0xb7faae48 in kdemain (argc=1, argv=0xbfa46194)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/karbon/main.cc:50
#19 0x08048936 in main (argc=)
    at /home/m4v-kde3/dev/kde/build/koffice/trunk/karbon/karbon_dummy.cpp:3
#0  0xb7fae410 in __kernel_vsyscall ()
Comment 1 Elián Hanisch 2008-10-29 06:02:41 UTC
compiled from svn trunk
Comment 2 Jan Hambrecht 2008-10-29 20:43:18 UTC
SVN commit 877558 by jaham:

fix crash which occured when drawing in split views

BUG: 173807



 M  +3 -0      KarbonPencilTool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=877558
Comment 3 Elián Hanisch 2008-10-30 06:41:39 UTC
can you look it again? I can still crash it, I deleted my build directory and recompiled just to be sure, revision 877685

the backtrace seems the same

Application: Karbon14 (karbon), signal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb460b6e0 (LWP 18594)]
[KCrash handler]
#6  0xb6edda0b in ?? () from /usr/lib/libQtCore.so.4
#7  0xb6ed5381 in qt_removeObject () from /usr/lib/libQtCore.so.4
#8  0xb6edb50d in QObject::~QObject () from /usr/lib/libQtCore.so.4
#9  0xb618c195 in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#10 0xb65140ae in QMenu::~QMenu () from /usr/lib/libQtGui.so.4
#11 0xb75ca475 in KMenu::KMenuPrivate::~KMenuPrivate ()
   from /usr/lib/kde4/lib/libkdeui.so.5
#12 0xb75ca50c in KMenu::~KMenu () from /usr/lib/kde4/lib/libkdeui.so.5
#13 0xb7600b6b in KXMLGUIBuilder::removeContainer ()
   from /usr/lib/kde4/lib/libkdeui.so.5
#14 0xb7610bb2 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#15 0xb7610c9b in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#16 0xb7610ab0 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#17 0xb7610c9b in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#18 0xb7610ab0 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#19 0xb760ba6d in KXMLGUIFactory::removeClient ()
   from /usr/lib/kde4/lib/libkdeui.so.5
#20 0xb7b77274 in KoMainWindow::slotActivePartChanged (this=0x81e32c8, 
    newPart=0x8191bb8)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/libs/main/KoMainWindow.cpp:1632
#21 0xb7b809ac in KoMainWindow::qt_metacall (this=0x81e32c8, 
    _c=QMetaObject::InvokeMetaMethod, _id=29, _a=0xbfe7479c)
    at /home/m4v-kde3/dev/kde/build/koffice/trunk/libs/main/KoMainWindow.moc:151
#22 0xb6ed9f79 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#23 0xb6eda642 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#24 0xb79b3613 in KParts::PartManager::activePartChanged ()
   from /usr/lib/kde4/lib/libkparts.so.4
#25 0xb79b41e8 in KParts::PartManager::setActivePart ()
   from /usr/lib/kde4/lib/libkparts.so.4
#26 0xb79b4e74 in KParts::PartManager::eventFilter ()
   from /usr/lib/kde4/lib/libkparts.so.4
#27 0xb7b85b81 in KoPartManager::eventFilter (this=0x81e2fb0, obj=0x8ac6828, 
    ev=0xbfe74d4c)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/libs/main/KoMainWindow.cpp:94
#28 0xb6ec54f8 in QCoreApplicationPrivate::sendThroughApplicationEventFilters
    () from /usr/lib/libQtCore.so.4
#29 0xb613ef13 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#30 0xb6144125 in QApplication::notify () from /usr/lib/libQtGui.so.4
#31 0xb750e483 in KApplication::notify () from /usr/lib/kde4/lib/libkdeui.so.5
#32 0xb6ec50b9 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#33 0xb6141661 in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#34 0xb61ab52d in ?? () from /usr/lib/libQtGui.so.4
#35 0xb61a9ee1 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#36 0xb61d2c2a in ?? () from /usr/lib/libQtGui.so.4
#37 0xb55edcc6 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#38 0xb55f1083 in ?? () from /usr/lib/libglib-2.0.so.0
#39 0xb55f163e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#40 0xb6ef09f8 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#41 0xb61d2a25 in ?? () from /usr/lib/libQtGui.so.4
#42 0xb6ec433d in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#43 0xb6ec44cd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#44 0xb6ec674d in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#45 0xb613e897 in QApplication::exec () from /usr/lib/libQtGui.so.4
#46 0xb7f49e48 in kdemain (argc=1, argv=0xbfe755f4)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/karbon/main.cc:50
#47 0x08048936 in main (argc=0, argv=0x8fa4440)
    at /home/m4v-kde3/dev/kde/build/koffice/trunk/karbon/karbon_dummy.cpp:3
#0  0xb7f4d410 in __kernel_vsyscall ()


Comment 4 Elián Hanisch 2008-10-30 07:10:15 UTC
though now is more difficult to crash it I gotta admit, will try to see if I can find a "sure way" to reproduce it.
Comment 5 Elián Hanisch 2009-06-09 08:05:49 UTC
I can't get this to crash anymore, so I'm closing it
trunk r979085