fix crash which occured when drawing in split views

BUG: 173807


svn path=/trunk/koffice/; revision=877558